Make Startup Feedback Effect aka Bouncing Cursor respect global size for small icons

BUG: 305611
REVIEW: 106166
FIXED-IN: 4.9.1